--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: steve@toths.info
   facebook:
   flickr:
-  github: steveftoth/steveftoth
+  github: steveftoth/steveftoth.github.io
   instagram:
-  linkedin: steveftoth
+  linkedin: stoth
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: codekoan
