--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: WebLog of Steve Toth
 description: Digital Bits
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/2992671?s=460&v=5
 
 #
 # Flags below are optional
